<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_ChargeTime" Id="{b403d63d-ae08-43cc-8b8f-a0b3260238ae}">
    <Declaration><![CDATA[TYPE ST_ChargeTime :
STRUCT
	timeToChargeLoad : REAL;
	Power			 : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>