<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="HMI_DB" Id="{51565ed3-b211-4eae-b667-6da55038d700}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	RemoteModeSelected 	: BOOL := TRUE;
	
	OpenAllDumpRlyPB	: BOOL;
	CloseAllChargeRlyPB	: BOOL;
	AbortPB				: BOOL;
	
	ChargerHVOFF_rlyDelayPT		: TIME := T#25MS;
	ChargerHVOFF_rlyDelayPT_INT	: INT := 25;
	
	HVONdelayPT					: TIME := T#250MS;
	HVONdelayPT_INT				: INT := 250;
	
	RunOutTMR_PT				: TIME := T#10S;
	RunOutTMR_PT_INT			: INT := 10;
	RunOutTMR_elapse			: INT;
	
	ChargingRunOutTMR_elapse	: INT;
	
	//admin bypasses
	SafetyOKBP					: BOOL;
	AllDumpRelaysOpenBP			: BOOL;
	InterlockPressureLossBP		: BOOL;
	AllChargeRelayCloseBP		: BOOL;
	NoFaultDetectedBP			: BOOL;
	//AllShortingSysRemovedBP		: BOOL;
	AlldcPSUokBP				: BOOL;
	LossHVsignalBP				: BOOL;
	
	//timeToChargeLoad 			: ARRAY [1..8] OF REAL;
	//GLSchargeTime	 			: ARRAY [1..3] OF REAL;
	TDKLoad 					: ARRAY [1..8] OF ST_Setpoints_Base; //or RETAIN
	GLSLoad	 					: ST_Setpoints_Base;
	
	(*PSratedV					: REAL := 50;
	RequiredChargeV				: REAL := 30;
	LoadCapacitance				: REAL := 600;
	wLCA						: BOOL := TRUE;
	NumOfCharger				: INT := 1;*)
END_VAR

VAR_GLOBAL
	LiftMachineGNDsw			: BOOL;
	//for startup run
	PeakChargerSP				: DINT;
	SustChargerSP				: DINT;
	FormChargerSP				: DINT;
	PreFormChargerSP			: DINT;
	FormTrigChargerSP			: DINT;
	PreFormTrigChargerSP		: DINT;
	
	OpenAllPeakDumpRlySW		: BOOL;
	OpenAllSustDumpRlySW		: BOOL;
	OpenAllFormDumpRlySW		: BOOL;
	OpenAllPreFormDumpRlySW		: BOOL;
	OpenFormTrigDumpRlySW		: BOOL;
	OpenPreFormTrigDumpRlySW	: BOOL;
	
	CloseAllPeakChargRlySW		: BOOL;
	CloseAllSustChargRlySW		: BOOL;
	CloseAllFormChargRlySW		: BOOL;
	CloseAllPreFormChargRlySW	: BOOL;
	CloseFormTrigChargeRlySW	: BOOL;
	ClosePreFormTrigChargeRlySW : BOOL;
	
	PeakHVONsw					: BOOL; //enable
	SustHVONsw					: BOOL; //enable
	FormHVONsw					: BOOL; //enable
	PreFormHVONsw				: BOOL;
	GLS1HVONsw					: BOOL;
	GLS2HVONsw					: BOOL;
	
	ResetPB_Local				: BOOL;
	
	(*PeakInhibitONsw				: BOOL;
	SustInhibitONsw				: BOOL;
	FormInhibitONsw				: BOOL;
	PreFormInhibitONsw			: BOOL;
	*)	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>